c2prj1_cards/grade.txt
Grading at Tue Jan  7 11:36:03 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:85:24: error: incompatible types when returning type ‘int’ but ‘card_t {aka struct card_tag}’ was expected
        default: return '?';
                        ^
cards.c:93:22: error: ‘NUM_SUIT’ undeclared (first use in this function)
      default: return NUM_SUIT;         
                      ^
cards.c:93:22: note: each undeclared identifier is reported only once for each function it appears in
Could not compile your card.c!

Overall Grade: FAILED
